--- a/soloAlbum/src/main/webapp/public/css/main.css
+++ b/soloAlbum/src/main/webapp/public/css/main.css
@@ -8,10 +8,24 @@
 #files {
 	display: none;
 }
+#imgBox {
+	left:15px;
+	
+	margin-top: 20px;
+	margin-left: 20px;
+	
+	display: flex;
+	height: 150px;
+	justify-content: flex-start;
+	align-items: center;
+	flex-wrap: nowrap;
+	overflow-x: scroll;
+}
 #photoButton {
 	width: 200px;
-	height: 100px;
-		
+	height: 120px;
+	margin: 0px 20px;
+	
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -19,10 +33,11 @@
 	
 	border: 5px dotted green;
 	border-radius: 10%;
-	transition: 1s;
+	transition: 0.3s;
 }
 #photoButton:hover {
 	transform: scale(1.05);
+	cursor: pointer;
 }
 #photoButton span {
 	display: inline-block;
@@ -37,38 +52,31 @@
 	border: 3px solid green;
 	border-radius: 50%;
 	
-	transition: 1s;
-}
-#imgBox {
-	left:15px;
-	
-	margin-top: 20px;
-	margin-left: 20px;
-	
-	width: 100%;
-	
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	flex-wrap: wrap;
+	transition: 0.3s;
 }
 .imgSmallBox {
-	width:400px;
-	height:100%;
-	margin-right: 5px;
-}
-.imgSmallBox .xspan {
-	z-index:2;
-	display: inline-block;
 	position: relative;
+	/* width:200px; */
+	height:100px;
+	margin-right: 20px;
+	left:0;
+	box-shadow: 2px 2px 10px 3px grey;
+}
+.imgSmallBox:hover {
+	cursor: pointer;
+}
+.imgSmallBox .xButton {
+	z-index: 99;
+	display: inline-block;
+	position: absolute;
 	left: 5px;
-	top: -265px;
-	width: 20px;
-	height: 20px;
+	top: 5px;
+	width: 17px;
+	height: 17px;
 	
 	text-align: center;
 	font-weight: 900;
-	font-size: 18px;
+	font-size: 15px;
 	color: green;
 	line-height: 10px;
 	border: 3px solid green;
@@ -78,12 +86,30 @@
 	transition: 0.1s;
 }
 
-.imgSmallBox .xspan:hover {
+.imgSmallBox .xButton:hover {
 	transform: scale(1.15);
-	font-size: 19px;
+	font-size: 17px;
+	line-height: 7px;
 }
 
 .imgSmallBox .preview {
 	position:relative;
+	height: 100%;
+}
+#main_container {
+	margin-top: 30px;
 	width: 100%;
+	height: 1000px;
+}
+#test_box {
+	margin-top: 300px; 
+	width: 200px;
+	height: 150px;
+	
+	position: relative;
+	
+	left: 50%;
+	transform: translateX(-50%);
+	
+	background-color: skyblue; 
 }
