--- a/soloAlbum/src/main/webapp/public/css/main.css
+++ b/soloAlbum/src/main/webapp/public/css/main.css
@@ -93,9 +93,7 @@ html, body, form {
 #mainContainer {
 	width: 100%;
 	height: 80%;
-	
-	position: relative;
-	
+/* position: relative 주면 이미지 드래그 이상하게 됨 */
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
@@ -108,18 +106,25 @@ html, body, form {
 	width:48%;
 	height:100%;
 	
+	/* position: relative 주면 이미지 드래그 이상하게 됨 */
+	
 	display:flex;
 	flex-direction: column;
 	justify-content: space-around;
 	align-itmes: center;
 	flex-wrap: nowrap;
 }
-.AlbumBox {
+.pages .albumBox {
 	width: 200px;
 	height: 150px;
-	
-	position: relative;
+	/* position: relative 주면 이미지 드래그 이상하게 됨 */
 	
 	background-color: beige; 
 }
 
+.pages .restBox{
+	display: none;
+}
+.restButton{
+	display: none;
+}
