요약 - 비동기로 사진 데이터 받아오기 구현중 1. 앨범 링크로 들어왔을때 비밀번호 입력 후 로그인 로직 	--> showPhotos에 pwdRequired에 따른 비밀번호 검증 창 추가 --> o 	--> PhotoController에 showPhotos.do 할때 albumVO 객체에 pwdRequired=y 일 경우 앨범값만 보내도록 수정 --> o 	--> PhotoController에 비동기로 showPhotos.do로 사진 url 보내는 url mapping 추가 --> o 	--> PhotoController에 비밀번호 검증 url mapping 추가 --> o

--- a/soloAlbum/src/main/webapp/public/css/showPhotosMain.css
+++ b/soloAlbum/src/main/webapp/public/css/showPhotosMain.css
@@ -17,6 +17,15 @@ html, body {
 	justify-content: center;
 	align-items: center;
 }
+#pwdContainer {
+	position: absolute;
+	z-index: 1400;
+}
+#pwdContainer #pwdButton {
+}
+#pwdContainer #pwdButton:hover {
+	cursor: pointer;
+} 
 #mainContainer {
 	width: 60%;
 	height: 80%;
@@ -31,6 +40,8 @@ html, body {
 	background-color: #ff8040;
 	border: 2px solid black;	
 	border-radius: 1.5%;
+	
+	opacity: 0;
 }
 #pageContainer {
 	width: 100%;
