--- a/soloAlbum/src/main/webapp/public/css/setPhotosMain.css
+++ b/soloAlbum/src/main/webapp/public/css/setPhotosMain.css
@@ -91,7 +91,7 @@ html, body, form {
 	height: 80px;
 }
 #mainContainer {
-	width: 100%;
+	width: 90%;
 	height: 80%;
 /* position: relative 주면 이미지 드래그 이상하게 됨 */
 	display: flex;
@@ -132,20 +132,20 @@ html, body, form {
 	background-color: beige; 
 }
 
-#mainContainer #buttonPageContainer {
+#mainContainer #informationContainer {
 	width: 20%;
-	height: 50%;
-	
+	height: 75%;
+	margin-top: 5%;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
+	justify-content: space-between;
 	align-items: center;
 	flex-wrap: nowrap;
 } 
 
-#mainContainer #buttonPageContainer #buttonBox {
+#mainContainer #informationContainer #buttonBox {
 	width: 60%;
-	height: 33%;
+	height: 22%;
 	margin-bottom:10px;
 	
 	display: flex;
@@ -154,22 +154,22 @@ html, body, form {
 	align-items: center;
 	flex-wrap: nowrap;
 }
-#mainContainer #buttonPageContainer #buttonBox button {
+#mainContainer #informationContainer #buttonBox button {
 	width: 80%;
-	height: 48%;
+	height: 45%;
 	transition: 0.1s;
 	background-color: white;
 	border-radius: 5%;
 	box-shadow: 0px 0px 2px green;
 	transition: 0.3s;
 }
-#mainContainer #buttonPageContainer #buttonBox button:hover {
+#mainContainer #informationContainer #buttonBox button:hover {
 	transform: scale(1.02);
 	box-shadow: 0px 0px 3px green;
 	cursor: pointer;
 }
-#mainContainer #buttonPageContainer #pageBox {
-	height: 20%;
+#mainContainer #informationContainer #pageBox {
+	height: 3%;
 	margin-bottom:10px;
 	
 	display: flex;
@@ -180,9 +180,9 @@ html, body, form {
 	
 	color: green;
 }
-#mainContainer #buttonPageContainer #pwdBox {
+#mainContainer #informationContainer #pwdBox {
 	width: 100%;
-	height: 45%;
+	height: 30%;
 	padding: 2%;
 	display: flex;
 	flex-direction: column;
@@ -192,12 +192,12 @@ html, body, form {
 	
 	border: 2px solid green;
 }
-#mainContainer #buttonPageContainer #pwdBox span {
+#mainContainer #informationContainer #pwdBox span {
 	font-size: 15px;
 	font-weight: 900;
 	color: green;
 }
-#mainContainer #buttonPageContainer #pwdBox #radioBox {
+#mainContainer #informationContainer #pwdBox #radioBox {
 	width:100%;
 	display: flex;
 	flex-direction: row;
@@ -205,10 +205,10 @@ html, body, form {
 	align-items: center;
 	flex-wrap: nowrap;
 }
-#mainContainer #buttonPageContainer #pwdBox #radioBox label {
+#mainContainer #informationContainer #pwdBox #radioBox label {
 	color: green;
 }
-#mainContainer #buttonPageContainer #pwdBox #radioBox div {
+#mainContainer #informationContainer #pwdBox #radioBox div {
 	width: 45%;	
 	display: flex;
 	flex-direction: row;
@@ -216,18 +216,60 @@ html, body, form {
 	align-items: center;
 	flex-wrap: nowrap;
 }
-#mainContainer #buttonPageContainer #pwdBox #radioBox div input:first-child{
+#mainContainer #informationContainer #pwdBox #radioBox div input:first-child{
 	margin-right: 20px;
 	font-size: 15px;
 	font-weight: 900;
 }
-#mainContainer #buttonPageContainer #pwdBox #pwd {
+#mainContainer #informationContainer #pwdBox #pwd {
 	width: 85%;
 	font-size: 10px;
-	padding: 1%;
+	padding: 2% 1%;
 	color: green;
 	text-align: center;
 	border: 0.5px solid #7CCE76;
+}
+#mainContainer #informationContainer #nameBox {
+	width: 100%;
+	height: 30%;
+	padding: 2%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	flex-wrap: nowrap;
+	
+	border: 2px solid green;
+}
+#mainContainer #informationContainer #nameBox span {
+	font-size: 15px;
+	font-weight: 900;
+	color: green;
+}
+#mainContainer #informationContainer #nameBox #albumName {
+	width: 85%;
+	font-size: 10px;
+	padding: 2% 1%;
+	color: green;
+	text-align: center;
+	border: 0.5px solid #7CCE76;
+}
+#mainContainer #informationContainer #nameBox button {
+	width: 30%;
+	font-size: 13px;
+	font-weight: bold;
+	padding: 1% 3%;
+	color: green;
+	text-align: center;
+	border: 0.5px solid #7CCE76;
+	background-color: #fff;
+	transition: 0.1s;
+}
+#mainContainer #informationContainer #nameBox button:hover {
+	tranform: scale(1.03);
+	color: #1A7913;
+	background-color: #BCFFB5;
+	cursor: pointer;
 }
 .pages .restBox{
 	display: none;
@@ -235,3 +277,4 @@ html, body, form {
 .restButton{
 	opacity: 0;
 }
+
