요약 - setPhotos에서 앨범 등록 시 406 에러 발생 해결 --오류 해결 	1. setPhotos 에서 사진 등록 성공 후 response 를 406으로 받음 ... 응답 형식이 다를때 뜬다는데, 확인 필요함 		--> 컴퓨터 부셔버리고 싶다. responseEntity에 String만 넣으면 제대로 가는데, map 을 넣으면 406이 뜬다. 		--> 3일째 이것만 들여다보고 있다. 		--> 그냥 String으로 albumList.do 보내주고 해결했다. map은 진짜 못보내는건가??? 	2. 앨범 등록 시 albumName 에 자꾸 , 가 포함되어 들어옴 		--> <input type="text" id="albumName" placeholder="제목을 입력해 주세요." > 에 name="albumName" 속성이 들어가 있어서 			formData에 따로 albumName 값을 추가해 줄 때 기존 albumName에 추가되는 형식으로 값이 들어간것 같다. name 지워주고 해결

--- a/soloAlbum/src/main/webapp/public/css/setPhotosMain.css
+++ b/soloAlbum/src/main/webapp/public/css/setPhotosMain.css
@@ -164,9 +164,21 @@ html, body, form {
 	transition: 0.3s;
 }
 #mainContainer #informationContainer #buttonBox button:hover {
-	transform: scale(1.02);
+	transform: scale(1.05);
 	box-shadow: 0px 0px 3px green;
 	cursor: pointer;
+	background-color: green;
+	color: white;
+}
+#mainContainer #informationContainer #buttonBox button:active {
+	transform: scale(1.2);
+	box-shadow: 0px 0px 50px green;
+}
+#mainContainer #informationContainer #buttonBox .restButton {
+	opacity: 0;
+}
+#mainContainer #informationContainer #buttonBox .restButton:hover {
+	cursor: default;
 }
 #mainContainer #informationContainer #pageBox {
 	height: 3%;
@@ -271,10 +283,8 @@ html, body, form {
 	background-color: #BCFFB5;
 	cursor: pointer;
 }
-.pages .restBox{
+.pages .restBox {
 	display: none;
 }
-.restButton{
-	opacity: 0;
-}
+
 
