--- a/soloAlbum/src/main/webapp/public/css/albumList.css
+++ b/soloAlbum/src/main/webapp/public/css/albumList.css
@@ -19,45 +19,65 @@ header h2 {
 }
 main {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
-#albumList {
+#album_list {
 	width: 50%;
 	box-shadow: 0px 0px 30px 0px lightgrey;
 }
-#listHead {
+#list_head {
 	background-color: green;
 	color: white;
 }
-#listHead, .AlbumlistDiv a , .AlbumlistLi, .AlbumlistDiv {
-	display: inline-block;
-	width:100%
-}
-#listHead, .AlbumlistDiv {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	border-bottom: 2px solid green;
-	border-radius: 2%;
-}
-#albumList .AlbumlistDiv:hover {
-	background-color: green;
-	color: white;
-	transition : 0.2s;
-}
-.listHeadName, .AlbumName {
+.list_head_name, .album_name {
 	display: inline-block;
 	width:60%;
 	text-align: center;
 }
-.listHeadDate, .AlbumDate {
+.list_head_date, .album_date {
 	display: inline-block;
 	width:20%;
 	text-align: center;
 }
-.listHeadpwd, .AlbumPwd {
+.list_head_pwd, .album_pwd {
 	display: inline-block;
 	width:20%;
 	text-align: center;
+}
+#list_head, .album_list_li, .album_list_li a, .album_list_div {
+	display: inline-block;
+	width:100%
+}
+#list_head, .album_list_div {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	border-bottom: 2px solid green;
+}
+#album_list .album_list_div:hover {
+	background-color: green;
+	color: white;
+	transition : 0.2s;
+}
+#new_album {
+	height: 30px;
+}
+#new_album {
+	width: 15%;
+	margin-top: 20px;
+	display: inline-block;
+	
+	border: 3px solid green;
+	background-color: white;
+	font-weight: 900;
+	text-align: center;
+}
+#new_album:hover {
+	background-color: green;
+	color: white;
+	border: 3px solid white;
+	transition : 0.2s;
+	cursor: pointer;
 }
