--- a/soloAlbum/src/main/webapp/public/css/showPhotosMain.css
+++ b/soloAlbum/src/main/webapp/public/css/showPhotosMain.css
@@ -8,7 +8,7 @@
 html, body {
 	height: 100%;
 }
-#backgroundContainer {
+#background_container {
 	width: 100%;
 	height: 100%;
 	
@@ -17,16 +17,16 @@ html, body {
 	justify-content: center;
 	align-items: center;
 }
-#pwdContainer {
+#pwd_container {
 	position: absolute;
 	z-index: 1400;
 }
-#pwdContainer #pwdButton {
+#pwd_container #pwd_button {
 }
-#pwdContainer #pwdButton:hover {
+#pwd_container #pwd_button:hover {
 	cursor: pointer;
 } 
-#mainContainer {
+#main_container {
 	width: 60%;
 	height: 80%;
 	position: relative;
@@ -43,7 +43,7 @@ html, body {
 	
 	opacity: 0;
 }
-#pageContainer {
+#page_container {
 	width: 100%;
 	height: 100%;
 	
@@ -52,7 +52,7 @@ html, body {
 	justify-content: space-around;
 	align-items: center;
 }
-#buttonPageContainer {
+#button_page_container {
 	position: absolute;
 	left: 3%;
 	top: 3%;
@@ -67,29 +67,29 @@ html, body {
 	align-items: center;
 	flex-wrap: nowrap;
 }
-.leftPage {
+.left_page {
 	border-right: 2px solid black;
 }
-.rightPage {
+.right_page {
 	border-left: 2px solid black;	
 }
 
-.pages .albumBox {
+.pages .album_box {
 	height:30%;
 	padding: 6px;
 	background-color: white; 
 	box-shadow: 0px 0px 2px 0.5px lightgrey;
 }
-.pages .albumBox img {
+.pages .album_box img {
 	height:100%;
 	box-shadow: 0px 0px 2px 0.5px lightgrey;
 }
-.pages .restBox {
+.pages .rest_box {
 	display: none;
 }
-.restButton {
+.rest_button {
 	display: none;
 }
-#restBoxs {
+#rest_boxs {
 	display: none;
 }
