--- a/soloAlbum/src/main/webapp/public/css/setPhotosMain.css
+++ b/soloAlbum/src/main/webapp/public/css/setPhotosMain.css
@@ -14,7 +14,7 @@ html, body, form {
 #img_box {
 	left:15px;
 	
-	margin-top: 20px;
+	margin-top: 5px;
 	margin-left: 20px;
 	
 	display: flex;
@@ -54,7 +54,7 @@ html, body, form {
 	border-radius: 50%;
 	transition: 0.3s;
 }
-.imgSmallBox {
+.img_small_box {
 	position: relative;
 	margin-right: 20px;
 	
@@ -64,10 +64,10 @@ html, body, form {
 	box-shadow: 2px 2px 10px 3px grey;
 	z-index: 999;
 }
-.imgSmallBox:hover {
+.img_small_box:hover {
 	cursor: pointer;
 }
-.imgSmallBox .xButton {
+.img_small_box .xButton {
 	z-index: 99;
 	display: inline-block;
 	position: absolute;
@@ -81,29 +81,62 @@ html, body, form {
 	
 	transition: 0.1s;
 }
-
-.imgSmallBox .xButton:hover {
+.img_small_box .xButton:hover {
 	transform: scale(1.15);
 }
 
-.imgSmallBox .preview {
+.img_small_box .preview {
 	position:relative;
 	height: 80px;
 }
+/* =====================작업중=====================  */
+.album_box_img {
+	position: relative;
+	height: 150px;
+	display:inline-block;
+	
+	box-shadow: 2px 2px 10px 3px grey;
+	z-index: 999;
+}
+.album_box_img:hover {
+	cursor: pointer;
+}
+.album_box_img .xButton {
+	z-index: 99;
+	display: inline-block;
+	position: absolute;
+	left: 5px;
+	top: 5px;
+	width: 17px;
+	height: 17px;
+	
+	border-radius: 50%;
+	cursor: pointer;
+	
+	transition: 0.1s;
+}
+.album_box_img .xButton:hover {
+	transform: scale(1.15);
+}
+.album_box_img .preview {
+	position:relative;
+	height: 150px;
+}
+/* =====================작업중=====================  */
 #main_container {
 	width: 90%;
-	height: 80%;
+	height: 73%;
 /* position: relative 주면 이미지 드래그 이상하게 됨 */
+	margin-top: 2%;
+	margin-left: 2%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: flex-start;
 	flex-wrap: nowrap;
-	
-/* 	bottom: 0; */
 }
 #main_container #page_container{
-	width: 80%;
+	width: 75%;
 	height: 100%;
 	
 	display: flex;
@@ -111,8 +144,12 @@ html, body, form {
 	justify-content: space-around;
 	align-items: center;
 	flex-wrap: nowrap;
+	
+	background-color: #ffffff;
+	box-shadow: 0px 0px 20px 1px lightgrey;
+	border-radius: 1.5%;
 } 
-.pages{
+.pages {
 	width:48%;
 	height:100%;
 	
@@ -129,9 +166,18 @@ html, body, form {
 	height: 150px;
 	/* position: relative 주면 이미지 드래그 이상하게 됨 */
 	
-	background-color: beige; 
+	box-shadow: 0px 0px 10px 0px lightgrey;
+	 
+	border-radius: 5%;
+	transition: 0.2s;
 }
-
+.pages .on {
+	/* position: relative 주면 이미지 드래그 이상하게 됨 */
+	height: 150px;
+	background-color: light-grey;
+	border-radius: 5%;
+	transition: 0.2s;
+}
 #main_container #information_container {
 	width: 20%;
 	height: 75%;
@@ -241,7 +287,7 @@ html, body, form {
 	text-align: center;
 	border: 0.5px solid #7CCE76;
 }
-#main_container #information_container #nameBox {
+#main_container #information_container #name_box {
 	width: 100%;
 	height: 30%;
 	padding: 2%;
@@ -253,12 +299,12 @@ html, body, form {
 	
 	border: 2px solid green;
 }
-#main_container #information_container #nameBox span {
+#main_container #information_container #name_box span {
 	font-size: 15px;
 	font-weight: 900;
 	color: green;
 }
-#main_container #information_container #nameBox #album_name {
+#main_container #information_container #name_box #album_name {
 	width: 85%;
 	font-size: 10px;
 	padding: 2% 1%;
@@ -266,7 +312,7 @@ html, body, form {
 	text-align: center;
 	border: 0.5px solid #7CCE76;
 }
-#main_container #information_container #nameBox button {
+#main_container #information_container #name_box button {
 	width: 30%;
 	font-size: 13px;
 	font-weight: bold;
@@ -277,14 +323,16 @@ html, body, form {
 	background-color: #fff;
 	transition: 0.1s;
 }
-#main_container #information_container #nameBox button:hover {
+#main_container #information_container #name_box button:hover {
 	tranform: scale(1.03);
 	color: #1A7913;
 	background-color: #BCFFB5;
 	cursor: pointer;
 }
-.pages .restBox {
+.pages .rest_boxs {
 	display: none;
 }
-
+#rest_boxs {
+	display: none;
+}
 
