--- a/soloAlbum/src/main/webapp/public/css/selfTest.css
+++ b/soloAlbum/src/main/webapp/public/css/selfTest.css
@@ -12,35 +12,33 @@ html, body {
 #container {
 	width:100%;
 	height: 100%;
-	position: relative;
 	transform-style: preserve-3d;
-}
-#page {
-	transform-style: preserve-3d;
-	width: 300px;
-	height: 500px;
-  	border: solid #555;
-  	transform-origin: 100% 100%;
-	border-width: 2px 0px;
-	transform: rotateX(60deg) rotateY(6deg);
 	perspective: 4200px;
 	perspective-origin: center;
-	transform-style: preserve-3d;
-	background-image: url("https://picsum.photos/420/300?random=2");
-	animation: flip1 5s infinite ease-in-out;
 }
+#page {
+	width: 400px;
+	height: 500px;
+	position: absolute;
+	top: 0px;
+	transform-origin: 100% 100%;
+	border: solid #555;
+	border-width: 2px 0px;
 
-.flip.flip1 {
-  right: 50%;
-  animation: flip1 5s infinite ease-in-out;
-  border-width: 2px 2px 2px 0;
+	transform-style: preserve-3d;
+	background-image: url(https://picsum.photos/420/300?random=1);
+	background-size: 420px 300px;
+	
+	right: 50%;
+	animation: flip1 5s infinite ease-in-out;
+	border-width: 2px 2px 2px 0;
 }
 
 @keyframes flip1 {
   0%, 20% {
-    transform: rotateX(60deg) rotateY(6deg);
+    transform: rotateX(15deg) rotateY(6deg);
   }
   80%, 100% {
-    transform: rotateX(60deg) rotateY(174deg);
+    transform: rotateX(15deg) rotateY(174deg);
   }
 }
