--- a/soloAlbum/src/main/webapp/public/css/selfTest.css
+++ b/soloAlbum/src/main/webapp/public/css/selfTest.css
@@ -1,14 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 * {
   padding: 0;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   box-sizing: border-box;
   font-family: "Indie Flower", cursive;
 }
-html, body {
+/* html, body {
 	width: 100%;
 	height: 100%;
-}
+} */
 #container {
 	width:100%;
 	height: 100%;
@@ -20,18 +20,16 @@ html, body {
 	width: 400px;
 	height: 500px;
 	position: absolute;
-	top: 0px;
-	transform-origin: 100% 100%;
+	top: 125px;
 	border: solid #555;
-	border-width: 2px 0px;
+	border-width: 2px 2px 2px 2px;
 
+	transform-origin: 100% 100%;
 	transform-style: preserve-3d;
 	background-image: url(https://picsum.photos/420/300?random=1);
-	background-size: 420px 300px;
-	
+	background-size: 100% 100%;
 	right: 50%;
 	animation: flip1 5s infinite ease-in-out;
-	border-width: 2px 2px 2px 0;
 }
 
 @keyframes flip1 {
