앨범 사진 목록 foreach로 받아서 여러개 넘어가도록 설정
backface-visibility: hidden; 쓰면 그냥 사라지기 때문에
홀수면 왼쪽, 짝수면 오른쪽에 배치해서양쪽면으로 페이지를 붙이게 설정 필요

--- a/soloAlbum/src/main/webapp/public/css/selfTest.css
+++ b/soloAlbum/src/main/webapp/public/css/selfTest.css
@@ -16,7 +16,7 @@
 	perspective: 4200px;
 	perspective-origin: center;
 }
-#page {
+.page {
 	width: 400px;
 	height: 500px;
 	position: absolute;
@@ -28,8 +28,9 @@
 	transform-style: preserve-3d;
 	background-image: url(https://picsum.photos/420/300?random=1);
 	background-size: 100% 100%;
+	backface-visibility: hidden;
 	right: 50%;
-	animation: flip1 5s infinite ease-in-out;
+	/* animation: flip1 5s infinite ease-in-out; */
 }
 
 @keyframes flip1 {
