요약 - 앨범 레이아웃 변경, 클릭시 페이징 1. 앨범 레이아웃 변경 2. 앨범 오른쪽/왼쪽 구역 클릭 시 다음/이전 페이지 넘어가는 애니메이션

--- a/soloAlbum/src/main/webapp/public/css/selfTest.css
+++ b/soloAlbum/src/main/webapp/public/css/selfTest.css
@@ -16,7 +16,7 @@
 	perspective: 4200px;
 	perspective-origin: center;
 }
-.cover {
+.front_cover {
 	width: 400px;
 	height: 500px;
 	position: absolute;
@@ -36,7 +36,7 @@
 .cover h1{
 	color: #fff;
 }
-.forwardPage {
+.forward_page {
 	width: 400px;
 	height: 500px;
 	position: absolute;
@@ -53,7 +53,7 @@
 	left: 50%;
 	/* animation: flip1 5s infinite ease-in-out; */
 }
-.reversePage{
+.reverse_page{
 	width: 400px;
 	height: 500px;
 	position: absolute;
