--- a/soloAlbum/src/main/webapp/public/css/showPhotosMain.css
+++ b/soloAlbum/src/main/webapp/public/css/showPhotosMain.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 	text-decoration: none;
 	list-style: none;	
+	  font-family: "Indie Flower", cursive;
 }
 html, body {
 	height: 100%;
@@ -31,31 +33,19 @@ html, body {
 	height: 80%;
 	position: relative;
 	bottom: 0;
-
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
-	flex-wrap: nowrap;
-	background-color: #ff8040;
-	border: 2px solid black;	
-	border-radius: 1.5%;
 	
 	opacity: 0;
 }
 #page_container {
 	width: 100%;
 	height: 100%;
-	
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
 }
-#button_page_container {
+#page_box {
 	position: absolute;
-	left: 3%;
-	top: 3%;
+	left: -8%;
+	top: -8%;
+	font-size: 20px;
+	font-weight: bold;
 }
 .pages {
 	width:48%;
@@ -66,30 +56,92 @@ html, body {
 	justify-content: space-around;
 	align-items: center;
 	flex-wrap: nowrap;
+	z-index: 5;
 }
-.left_page {
-	border-right: 2px solid black;
-}
-.right_page {
-	border-left: 2px solid black;	
-}
-
 .pages .album_box {
 	height:30%;
 	padding: 6px;
 	background-color: white; 
 	box-shadow: 0px 0px 2px 0.5px lightgrey;
+	transform-style: preserve-3d;
 }
 .pages .album_box img {
 	height:100%;
 	box-shadow: 0px 0px 2px 0.5px lightgrey;
+	transform-style: preserve-3d;
 }
-.pages .rest_box {
-	display: none;
+.cover {
+	width: 400px;
+	height: 500px;
+	position: absolute;
+	top: 5%;
+	border: solid #555;
+	border-width: 2px 2px 2px 2px;
+	transform-style: preserve-3d;
+	backface-visibility: hidden;
+	background-color: black;
+	z-index: 10;
 }
-.rest_button {
-	display: none;
+.cover h1{
+	color: #fff;
 }
-#rest_boxs {
-	display: none;
+.front_cover{
+	left: 50%;
+	transform: rotateX(15deg) rotateY(-6deg);
+	transform-origin: 0% 0%;
+	z-index: 10;
 }
+.back_cover{
+	right: 50%;
+	transform: rotateX(15deg) rotateY(174deg);
+	transform-origin: 100% 0%;
+	z-index: 10;
+}
+.forward_page {
+	width: 400px;
+	height: 500px;
+	position: absolute;
+	border: solid #555;
+	border-width: 2px 2px 2px 2px;
+	top: 5%;
+	transform: rotateX(15deg) rotateY(-6deg);
+	transform-origin: 0% 0%;
+	transform-style: preserve-3d;
+	background-color: #969696;
+	/* background-image: url(https://picsum.photos/420/300?random=1); 
+	background-size: 100% 100%;*/
+	backface-visibility: hidden;
+	left: 50%;
+	z-index: 2;
+	/* animation: flip1 5s infinite ease-in-out; */
+}
+.reverse_page {
+	width: 400px;
+	height: 500px;
+	position: absolute;
+	border: solid #555;
+	border-width: 2px 2px 2px 2px;
+	top: 5%;
+	transform: rotateX(15deg) rotateY(174deg);
+	transform-origin: 100% 0%;
+	transform-style: preserve-3d;
+	background-color: #969696;
+	/* background-image: url(https://picsum.photos/420/300?random=1); 
+	background-size: 100% 100%;*/
+	backface-visibility: hidden;
+	right: 50%;
+	z-index: 3;
+	/* animation: flip1 5s infinite ease-in-out; */
+}
+.next_page {
+	transform: rotateX(15deg) rotateY(-6deg);
+	z-index: 100;
+	opacity: 0;
+}
+.prev_page {
+	transform: rotateX(15deg) rotateY(6deg);
+	z-index: 100;
+	opacity: 0;
+}
+
+
